# Exercism

./: .gitignore  README.md
cpp/lasagna/: lasagna.cpp
cpp/last-will/: last_will.cpp  last_will_test.cpp
python/guidos-gorgeous-lasagna/: lasagna.py
rust/accumulate/src/: lib.rs
rust/acronym/src/: lib.rs
rust/affine-cipher/: Cargo.toml
rust/affine-cipher/src/: lib.rs
rust/all-your-base/src/: lib.rs
rust/allergies/: Cargo.toml
rust/allergies/src/: lib.rs
rust/alphametics/src/: lib.rs
rust/anagram/src/: lib.rs
rust/armstrong-numbers/src/: lib.rs
rust/atbash-cipher/src/: lib.rs
rust/beer-song/src/: lib.rs
rust/binary-search/src/: lib.rs
rust/bob/src/: lib.rs
rust/bowling/src/: lib.rs
rust/circular-buffer/src/: lib.rs
rust/clock/src/: lib.rs
rust/collatz-conjecture/src/: lib.rs
rust/crypto-square/benches/: what_is_faster.rs
rust/crypto-square/src/: lib.rs
rust/custom-set/src/: lib.rs
rust/decimal/: Cargo.toml
rust/decimal/src/: lib.rs
rust/difference-of-squares/src/: lib.rs
rust/diffie-hellman/src/: lib.rs
rust/magazine-cutout/: Cargo.toml
rust/perfect-numbers/: Cargo.toml
rust/pig-latin/: Cargo.toml
rust/poker/: Cargo.toml
rust/rail-fence-cipher/: Cargo.toml
rust/react/: Cargo.toml  perf.data  perf.data.old
rust/react/benches/: Hashmap_vs_Vector.rs  tester.rs
rust/react/examples/: hundred_chained_computes.rs
rust/react/src/: cell.rs  common.rs  lib.rs
rust/react/src/cell/: compute_cell.rs  input_cell.rs
rust/scrabble-score/: Cargo.toml  test.txt
rust/tournament/: Cargo.toml
rust/yacht/: Cargo.toml
(+74 files in other folders)
