[package]
edition = "2021"
name = "react"
version = "2.0.0"

[build]
rustflags = ["-C", "target-cpu=native"]

[dependencies]
itertools = "0.11.0"

[target.x86_64-unknown-linux-gnu]
linker = "/usr/bin/clang"
rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]

[profile.bench]
debug = true

[profile.release]
lto = "fat"
codegen-units = 1
debug = true
